service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-service
spec:
  type: NodePort
  selector:
    app: python-flask
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 31409
